2023-09-21T08:12:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6258966092 # 1180
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-21
* notice: last 14d: unq all: 3 21
* notice: prev accum: outdated-unq outdated-all / unq all: 629 995 / 644 1015
* notice: next accum: outdated-unq outdated-all / unq all: 629 995 / 645 1016
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-21]

2023-09-20T16:11:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6251273948 # 1178
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-20
* notice: last 14d: unq all: 3 20
* notice: prev accum: outdated-unq outdated-all / unq all: 627 993 / 644 1014
* notice: next accum: outdated-unq outdated-all / unq all: 629 995 / 644 1015
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2023-09-06] / [2023-09-20]

2023-09-20T08:12:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6245813577 # 1177
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-20
* notice: last 14d: unq all: 3 20
* notice: prev accum: outdated-unq outdated-all / unq all: 627 993 / 642 1012
* notice: next accum: outdated-unq outdated-all / unq all: 627 993 / 644 1014
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-09-20]

2023-09-20T00:40:56Z: