@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-21T08:12:07Z",
-  "count_outdated" : 995,
-  "uniques_outdated" : 629,
-  "count" : 1016,
+  "timestamp" : "2023-09-21T16:10:55Z",
+  "count_outdated" : 996,
+  "uniques_outdated" : 630,
+  "count" : 1017,
   "uniques" : 645,
   "clones" : [
-    {
-      "timestamp": "2023-09-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-08T00:00:00Z",
       "count": 2,
@@ -97,9 +88,9 @@
     },
     {
       "timestamp": "2023-09-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
