@@ -1,3 +1,12 @@
+2023-09-21T16:10:55Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6264267709 # 1181
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-21
+* notice: last 14d: unq all: 3 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 629 995 / 645 1016
+* notice: next accum: outdated-unq outdated-all / unq all: 630 996 / 645 1017
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2023-09-07] / [2023-09-21]
+
 2023-09-21T08:12:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6258966092 # 1180
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-21
